# resume-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: deployment.md
docs/superpowers/specs/: 2026-06-16-ai-resume-analyzer-design.md
eval/: metrics.py  rag_benchmark.py  report.md  run_eval.py  test_cases.py
src/: main.py
src/agents/: base.py  jd_agent.py  library_agent.py  matching_agent.py  resume_agent.py  utils.py
src/core/: config.py  healthcheck.py  logging_config.py  models.py  orchestrator.py
src/rag/: embeddings.py  library.py  loader.py  retriever.py  splitter.py  vector_store.py
src/tools/: pdf_parser.py  search.py  skill_matcher.py
src/ui/: app.py  theme.py
src/ui/components/: resume_preview.py  score_chart.py  suggestion_card.py
src/ui/pages/: library_manage.py  library_match.py  single_analysis.py
tests/: conftest.py  rag_pipeline_check.py  test_extract_json.py  test_models.py  test_rag_pipeline.py  test_skill_matcher.py  test_splitter.py
