[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "resume-analyzer"
version = "0.1.0"
description = "AI-driven resume analysis and job matching engine"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "fastembed>=0.7.4",
    "PyMuPDF>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
