[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-analyzer"
version = "0.2.0"
description = "AI-driven resume analysis and job matching engine"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35.0",
    "langchain>=0.3.0,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "fastembed>=0.7.4",
    "PyMuPDF>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0",
    "pre-commit>=3.0",
]

[project.scripts]
resume-analyzer = "src.main:main"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
